[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz_interface"
version = "0.1.0"
dependencies = [
        "gradio==5.35.0",
        "plotly==6.1.2",
        "rdkit==2025.3.2",
        "biopython==1.84",
        "posebusters==0.4.4",
        "pywebview==5.4"
]
requires-python = ">=3.11"
description = "A web interface for Boltz created with Gradio"

[project.gui-scripts]
boltz_gui = "cli_interface.gradio_cli:main"